--- a/美赛论文提纲.md
+++ b/美赛论文提纲.md
@@ -74,6 +74,6 @@
 
 ## Thoughts
 
-- 切题很重要——最好要掌握一个熟一点的话题
-- 模型要好——CAFE的模型
-- 实验图要体现出实验结果
+- 切题很重要——最好要掌握一个**熟一点的话题**（比如语言那篇牵扯出同一个语系）
+- 模型要好——CAFE的模型（模型很复杂）
+- 实验图要体现出实验结果（去年他们组的论文图片就做的很容易让人明白）
