--- a/美赛论文提纲.md
+++ b/美赛论文提纲.md
@@ -24,7 +24,7 @@
   - Assumption 1.
   - Assumption 2.
   - ...
-- Notations (abbr、code) table
+- Notations (abbr、code、terminology) table
 
 
 
@@ -38,13 +38,19 @@
 
 ## Experiments
 
-**实验思路：**不同模型对比、真实数据集、实验结果随参数变化（*敏感度测试*）。。。
+**实验思路：**不同模型对比、真实数据集
 
 ### Task 1
 
 ### Task 2
 
 ### Task 3
+
+
+
+## Sensitivity Analysis
+
+实验结果随参数变化（*敏感度测试*）。。。
 
 
 
