--- a/美赛论文提纲.md
+++ b/美赛论文提纲.md
@@ -84,6 +84,7 @@
 - 模型要好——CAFE的模型（模型很复杂）
 - 实验图要体现出实验结果（去年他们组的论文图片就做的很容易让人明白）
 - restatement 可以放到 introduction 里面，用 contribution 说
+- 最后调格式、图片大小
 
 
 
